# quantify-your-life

./: .gitignore  PLAN.md  README.md  code_analysis_rules.json  config_example.json  export-config.bat  export.bat  pyproject.toml  start.bat
docs/: GIT_COUNTING_CODE_LINES.md
docs/git/: COMMITS.md  LINES_ADDED.md  LINES_REMOVED.md  NET_LINES.md  PROJECTS_CREATED.md  TOP_10_REPOS.md
docs/sources/: excel.md  git-stats.md  hometrainer.md  track-and-graph.md
prompts/: whats-next.md
src/quantify/: __init__.py  main.py
src/quantify/cli/: __init__.py  export_config_menu.py  formatting.py  menu.py  project_selector.py  source_selector.py  utils.py
src/quantify/cli/handlers/: __init__.py  database.py  debug.py  git_stats.py  hometrainer.py  period_selector.py  (+3 more)
src/quantify/config/: config_writer.py  constants.py  project_manager.py  settings.py
src/quantify/db/: connection.py
src/quantify/export/: __init__.py  html_exporter.py  monthly_builder.py  stats_builder.py  top_features_exporter.py
src/quantify/services/: db.py  logger.py  monthly_stats.py  stats.py  stats_calculator.py
src/quantify/sources/: __init__.py  base.py  registry.py
src/quantify/sync/: __init__.py  ftp_syncer.py
src/quantify/utils/: __init__.py  json_utils.py
static/css/: stats.css
static/js/: chart.js  monthly_chart.js  top_chart.js
templates/: index.html  monthly_comparison.html  stats.html  top_features.html
tests/: test_config_writer.py  test_html_exporter.py  test_json_utils.py  test_project_manager.py  test_settings.py
tools/: analyze_code.bat  fix_issues.bat  tests.bat
(+23 files in other folders)
