[project]
name = "quantify-your-life"
version = "0.1.0"
description = "CLI tool to view time statistics from Track & Graph database"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.0",
    "pyftpsync>=4.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "xlrd>=2.0.0",
]

[project.scripts]
quantify = "quantify.main:main"
quantify-export-config = "quantify.main:export_config"
quantify-export = "quantify.main:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantify"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
